<resources>
    <string name="app_name">meowsandbarks</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome!</string>
    <string name="logoDesc">the coolest logo you\'ll ever meet</string>
    <string name="email">Email</string>
    <string name="about_me">About me</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="placeholder">placeholder</string>
    <string name="pets">Pets</string>
    <string name="cont">Continue</string>
    <string name="tag">Tag</string>
    <string name="add">Add</string>
    <string name="about_pet">About pet</string>
    <string name="breed_optional">Breed (optional)</string>
    <string name="type">Type</string>
    <string name="age">Age</string>
    <string name="preference_file">com.example.meowsandbarks.PREFERENCE_FILE</string>
    <string name="home">Home</string>
    <string name="logout">logout</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
</resources>